inicio de login

--- a/loading.html
+++ b/loading.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cleaning 2 You</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/loadingcss.css">
 </head>
 <body>
    
@@ -22,7 +22,7 @@
             </svg>
         </div>
         <div class="footer-content">
-            <p>&copy; 2024 Cleaning2You.</p>
+            <p>&copy; Cleaning2You 2024</p>
         </div>
     </footer>
 
